# PianoWarrior

./: .gitignore  .pre-commit-config.yaml  .pylintrc  pyproject.toml  run_socket.py
guess-note/: main.sh  requirements.txt  run_socket.py
guess-note/website/: main.css  main.js  main.scss
website/: index.html  main.css  main.css.map  main.js  main.scss
